# freertos-socfpga

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  DoxygenLayout.xml  Makefile  README.md  lscript.ld
FreeRTOS/: CMakeLists.txt
FreeRTOS/Demo/CORTEX_A55_AGILEX_5_SOC/: CMakeLists.txt  FreeRTOSConfig.h  FreeRTOSIPConfig.h  fpga_mmio.h
FreeRTOS/Fat-Fs/: ff_dev_abstraction.c  ff_dev_abstraction.h  ff_dev_support.c  ff_fat.c  ff_ioman.c  ff_locking.c  ff_sddisk.c  ff_sys.c
FreeRTOS/Fat-Fs/include/: FreeRTOSFATConfig.h  FreeRTOSFATConfigDefaults.h  ff_error.h  ff_fat.h  ff_ioman.h
FreeRTOS/Fat-Fs/test/: ff_dev_support.c
FreeRTOS/FreeRTOS-Plus/Source/: CMakeLists.txt
FreeRTOS/portable/: CMakeLists.txt
drivers/: CMakeLists.txt  mainpage.dox
drivers/bridge/: CMakeLists.txt  socfpga_bridge.c  socfpga_bridge.h  socfpga_bridge_ll.c  socfpga_bridge_ll.h
drivers/clk_mngr/: CMakeLists.txt  socfpga_clk_mngr.c  socfpga_clk_mngr.h  socfpga_clk_mngr_reg.h
drivers/common/: CMakeLists.txt  socfpga_cache.h  socfpga_cache_maintenance.S  socfpga_defines.h
drivers/console/: CMakeLists.txt  socfpga_console.c  socfpga_console.h
drivers/dma/: CMakeLists.txt  socfpga_dma.c  socfpga_dma.h  socfpga_dma_reg.h
drivers/ethernet/: CMakeLists.txt  socfpga_xgmac.c  socfpga_xgmac.h  socfpga_xgmac_configs.h  socfpga_xgmac_ll.c  socfpga_xgmac_ll.h  socfpga_xgmac_phy.c  socfpga_xgmac_phy.h  socfpga_xgmac_phy_ll.c  socfpga_xgmac_phy_ll.h  socfpga_xgmac_reg.h
drivers/fcs/: CMakeLists.txt  socfpga_fcs.c  socfpga_fcs.h  socfpga_fcs_ll.h
drivers/fpga_manager/: CMakeLists.txt  socfpga_fpga_manager.c  socfpga_fpga_manager.h  socfpga_freeze_ip.c  socfpga_freeze_ip.h  socfpga_freeze_ip_ll.c  socfpga_freeze_ip_ll.h
drivers/gic/: CMakeLists.txt  socfpga_GIC.c  socfpga_GIC.h  socfpga_gic_reg.c  socfpga_gic_reg.h  socfpga_gic_registers.h  socfpga_interrupt.c  socfpga_interrupt.h  socfpga_interrupt_priority.h
drivers/gpio/: CMakeLists.txt  socfpga_gpio.c  socfpga_gpio.h  socfpga_gpio_reg.h
drivers/i2c/: CMakeLists.txt  socfpga_i2c.c  socfpga_i2c.h  socfpga_i2c_ll.c  socfpga_i2c_ll.h  socfpga_i2c_reg.h
drivers/i3c/: CMakeLists.txt  socfpga_i3c.c  socfpga_i3c.h  socfpga_i3c_ll.c  socfpga_i3c_ll.h  socfpga_i3c_regs.h
drivers/iossm/: CMakeLists.txt  socfpga_iossm.c  socfpga_iossm.h  socfpga_iossm_ll.c  socfpga_iossm_ll.h
drivers/qspi/: CMakeLists.txt  socfpga_flash.c  socfpga_flash.h  socfpga_flash_adapter.c  socfpga_flash_adapter.h  socfpga_qspi.c  socfpga_qspi.h  socfpga_qspi_ll.c  socfpga_qspi_ll.h  socfpga_qspi_reg.h
drivers/reboot_mngr/: CMakeLists.txt  socfpga_reboot_mngr.c  socfpga_reboot_mngr.h
drivers/reset_mngr/: CMakeLists.txt  socfpga_rst_mngr.c  socfpga_rst_mngr.h  socfpga_rst_mngr_reg.h
drivers/samples/: CMakeLists.txt  README.md  debugger_script.ds  samples_main.c  target_socfpga.cmake
drivers/samples/bridge/: CMakeLists.txt  bridge_sample.c  bridge_sample.h  fpga2hps_bridge.c  fpga2sdram_bridge.c  hps2fpga_bridge.c  lwhps2fpga_bridge.c  samples_app.h  socfpga_mmc.c  socfpga_mmc.h
drivers/samples/dma/: CMakeLists.txt  dma_sample.c  dma_sample.h  samples_app.h
drivers/samples/fatfs/: CMakeLists.txt  fatfs_sample.c  fatfs_sample.h  samples_app.h
drivers/samples/fcs/: CMakeLists.txt  fcs_sample.c  samples_app.h
drivers/samples/fpga_manager/: CMakeLists.txt  fpga_manager_sample.c  fpga_pr_sample.c  fpga_pr_sample.h  samples_app.h  socfpga_mmc.c  socfpga_mmc.h
drivers/samples/gpio/: CMakeLists.txt  gpio_sample.c  samples_app.h
drivers/samples/i2c/: CMakeLists.txt  i2c_sample.c  samples_app.h
drivers/samples/i3c/: CMakeLists.txt  i3c_sample.c  i3c_sample.h  samples_app.h
drivers/samples/iossm/: CMakeLists.txt  iossm_sample.c  iossm_sample.h  samples_app.h
drivers/samples/qspi/: CMakeLists.txt  qspi_sample.c  qspi_sample.h  samples_app.h
drivers/samples/reboot_mngr/: CMakeLists.txt  reboot_mngr_sample.c  reboot_mngr_sample.h  samples_app.h
drivers/samples/rsu/: CMakeLists.txt  initial_image.pfg  rsu_sample.c  samples_app.h
drivers/samples/sdm_mailbox/: CMakeLists.txt  samples_app.h  sdm_mbox_sample.c
drivers/samples/sdmmc/: CMakeLists.txt  samples_app.h  sdmmc_sample.c  sdmmc_sample.h
drivers/samples/seu/: CMakeLists.txt  samples_app.h  seu_sample.c  seu_sample.h
drivers/samples/spi/: CMakeLists.txt  samples_app.h  spi_sample.c
drivers/samples/timer/: CMakeLists.txt  samples_app.h  timer_sample.c  timer_sample.h
drivers/samples/uart/: CMakeLists.txt  samples_app.h  uart_sample.c
drivers/samples/usb3/: CMakeLists.txt  samples_app.h  usb3_sample.c
drivers/samples/wdt/: CMakeLists.txt  samples_app.h  wdt_sample.c
drivers/sdm_mailbox/: CMakeLists.txt  socfpga_mbox_client.c  socfpga_mbox_client.h  socfpga_sip_handler.c  socfpga_sip_handler.h
drivers/sdmmc/: CMakeLists.txt  socfpga_combo_phy.h  socfpga_sdmmc.c  socfpga_sdmmc.h  socfpga_sdmmc_ll.c  socfpga_sdmmc_ll.h  socfpga_sdmmc_reg.h
drivers/seu/: CMakeLists.txt  socfpga_seu.c  socfpga_seu.h
drivers/smmu/: CMakeLists.txt  socfpga_smmu.c  socfpga_smmu.h  socfpga_smmu_config.h  socfpga_smmu_reg.h
drivers/spi/: CMakeLists.txt  socfpga_spi.c  socfpga_spi.h  socfpga_spi_ll.c  socfpga_spi_ll.h  socfpga_spi_reg.h
drivers/sys_mngr/: CMakeLists.txt  socfpga_sys_mngr_reg.h
drivers/tests/: CMakeLists.txt  target_socfpga.cmake  test_main.c  test_main.h
drivers/tests/bridge/: bridge_driver_test.c
drivers/tests/dma/: dma_test.c  dma_test.h
drivers/tests/fatfs/: fat.c
drivers/tests/fcs/: fcs_test.c
drivers/timer/: CMakeLists.txt  socfpga_timer.c  socfpga_timer.h  socfpga_timer_reg.h
drivers/uart/: CMakeLists.txt  socfpga_uart.c  socfpga_uart.h  socfpga_uart_ll.c  socfpga_uart_ll.h  socfpga_uart_reg.h
drivers/usb3/: CMakeLists.txt  socfpga_usb.c  socfpga_usb.h  socfpga_usb3_reg.h
drivers/wdt/: CMakeLists.txt  socfpga_watchdog.c  socfpga_watchdog.h  socfpga_watchdog_reg.h
librsu/: CMakeLists.txt
librsu/src/: libRSU.c  libRSU_cb.c  libRSU_cfg.c  libRSU_image.c  libRSU_ops.c
tinyusb/: CMakeLists.txt
tinyusb/src/: tusb.c  tusb_config.h  usb_main.c  usb_main.h
(+164 files in other folders)
